[package]
name = "rustgeomapping"
description = "A set of base tools that are designed to allow RGBD cameras create 2.5D heightmaps from the captured pointclouds. Primarily aimed at autonomous geotechnical feature reconstruction."
version = "0.2.21"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/Jingham2510/rustgeomapping"
readme =    "README.md"
keywords = ["computer_vision", "geotechnical", "depth_cameras", "RGBD"]
categories = ["computer-vision", "science::geo", "data-structures", "multimedia::images", "science::robotics"]



[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
image = "0.25.10"
nalgebra = "0.34.2"
opencv = {version = "0.98.2", features = ["clang-runtime"], optional = true}
realsense-rust = {version ="1.3.0", optional = true}
realsense-sys = {version ="2.56.5", optional = true}


[features]
sense = ["dep:opencv", "dep:realsense-rust", "dep:realsense-sys"]
analysis = []